--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
                         "inlineStyleLanguage": "scss",
                         "assets": ["src/favicon.ico", "src/assets"],
                         "styles": ["src/styles.scss"],
-                        "scripts": []
+                        "scripts": ["node_modules/particles.js/particles.js"]
                     },
                     "configurations": {
                         "production": {
